# beep_jetcobot_ros2_opencv

./: README.md
beep_jetcobot_bringup/: package.xml  setup.cfg  setup.py
beep_jetcobot_bringup/beep_jetcobot_bringup/: aruco_detector.py  joint_control.py  pick_place.py  yolo_client.py
beep_jetcobot_bringup/launch/: jetcobot.launch.py  jetcobot_camera.launch.py  jetcobot_opencv.launch.py  jetcobot_ver5.launch.py
beep_jetcobot_bringup/test/: generate_aruco.py
beep_jetcobot_control/: package.xml  setup.cfg  setup.py
beep_jetcobot_control/beep_jetcobot_control/: aruco_detector.py  contour_detector.py  joint_control.py  pick_place.py  pick_place_action_server.py  pick_place_action_server_ver.py  pick_place_action_server_ver2.py  pick_place_action_server_ver3.py  pick_place_action_server_ver4.py  pick_place_action_server_ver5.py  pick_place_ver2.py  yolo_detector.py
beep_jetcobot_control/config/: camera_cali.yaml  handeye_result.yaml
beep_jetcobot_control/resource/: [origin]pick_place_action_server.py  pick_place_action_server_ver5.md  storage_picking_issues.md
beep_jetcobot_description/: CMakeLists.txt  package.xml
beep_jetcobot_moveit_config/: CMakeLists.txt  package.xml
beep_jetcobot_msgs/: CMakeLists.txt  package.xml
beep_jetcobot_msgs/action/: PickPlace.action
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/beep_jetcobot_control/share/beep_jetcobot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/beep_jetcobot_control/share/beep_jetcobot_control/config/: camera_cali.yaml
log/: latest_build
(+14 files in other folders)
