<?xml version="1.0"?>
<package format="3">
  <name>beep_jetcobot_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages, services, and actions for beep_jetcobot</description>
  <maintainer email="sebin5736@gmail.com">jetcobot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
